# fiap-tech-challenge-fase2

./: .gitignore  README.md  extract.py  ingestao_s3.py  pyproject.toml
dados_brutos/: pregao_2025-07-15.csv  pregao_2025-07-17.csv
dados_brutos_processados/: pregao_2025-07-14.csv  pregao_2025-07-16.csv  pregao_2025-07-18.csv
tests/: validar_parquet.py  validar_parquet_local.py
