[tool.poetry]
name = "postech-tech-challenge"
version = "1.0.0"
description = ""
authors = ["fernando-lfs <fernando.l.f@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.1"      
requests = "^2.32.4"
awswrangler = "^3.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
